Fix service location dialog overflow on mobile. (#2949)

--- a/themes/finna2/less/finna/organisation-info.less
+++ b/themes/finna2/less/finna/organisation-info.less
@@ -461,7 +461,7 @@
                             flex: 0 1 60%;
                         }
                         .service-location-container {
-                            flex: 1;
+                            min-width: 150px;
                         }
 
                         label {
